--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <img src="images/catplay.jpg" width="400px"/>
                 </section>
 	            <section>
-                    <h3>What Can We Learn From This?</h3>
+                    <h3>What Have We Learnt?</h3>
                     <img src="images/covercat.jpg" width="500px"/>
                 </section>
 				<section>
