--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 				</section>
                 <section>
-                    <div><iframe src="http://localhost:3000" width="800" height="600"></iframe></div>
+                    <div><iframe src="http://wubble-katiemiller.rhcloud.com" width="800" height="600"></iframe></div>
                 </section>
                 <section>
                     <h3>What's Functional Programming?</h3>
