--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </section>
                 <section>
                     <h3>What's OpenShift?</h3>
-                    <img src="images/paas-diagram.png" width="600px"/>
+                    <img src="images/paas-diagram.png" style="width: 600px; border: none;"/>
                 </section>
                 <section>
                     <h3>Puzzle Pieces</h3>
