Removing iframe with old URL

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 				</section>
                 <section>
-                    <div><iframe src="http://wubble-katiemiller.rhcloud.com" width="800" height="600"></iframe></div>
+                    <h3><a href="https://github.com/codemiller/wubble" target="_blank">Wubble</a> Demo App</h3>
                 </section>
                 <section>
                     <h3>What's Functional Programming?</h3>
